// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionEdit Component Render default 1`] = `
<div>
  <mdtoolbar-stub>
    <router-link-stub>
      <mdbutton-stub
        class="md-icon-button"
      >
        <mdicon-stub>
          keyboard_backspace
        </mdicon-stub>
      </mdbutton-stub>
    </router-link-stub>
     
    <h3
      class="md-title"
    >
      Transaction: 
    </h3>
     
    <mdbutton-stub
      class="md-icon-button"
      id="delete"
    >
      <mdicon-stub>
        delete
      </mdicon-stub>
    </mdbutton-stub>
  </mdtoolbar-stub>
   
  <!---->
   
  <mddialogconfirm-stub />
</div>
`;

exports[`TransactionNew Component Render default 1`] = `
<div>
  <mdtoolbar-stub>
    <router-link-stub>
      <mdbutton-stub
        class="md-icon-button"
      >
        <mdicon-stub>
          keyboard_backspace
        </mdicon-stub>
      </mdbutton-stub>
    </router-link-stub>
     
    <h3
      class="md-title"
    >
      Add new Transaction
    </h3>
  </mdtoolbar-stub>
   
  <transactionform-stub />
</div>
`;
